--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="page-top">
+    <!-- <header class="page-top">
         <div class="page-top-container container">
             <nav class="navigation">
                 <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
@@ -33,16 +33,16 @@
                 </ul>
             </address>
         </div>
-    </header>
+    </header> -->
     <main>
-        <section class="efective-solutions-section">
+        <!-- <section class="efective-solutions-section">
             <div class="container">
                 <h1 class="efective-solutions-title">Effective Solutions
                     for Your Business</h1>
                 <button class="efective-solutions-button" type="button">Order Service</button>
             </div>
-        </section>
-        <section class="core-values-section">
+        </section> -->
+        <!-- <section class="core-values-section">
             <div class="container">
                 <h2 class="visually-hidden">Core values</h2>
                 <ul class="core-values-list">
@@ -92,7 +92,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <section class="team">
             <div class="container">
                 <h2 class="section-title">Our Team</h2>
@@ -252,7 +252,7 @@
                 </ul>
             </div>
         </section>
-        <section class="portfolio-section">
+        <!-- <section class="portfolio-section">
             <div class="container">
                 <h2 class="section-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
@@ -341,9 +341,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="end-section">
+    <!-- <footer class="end-section">
         <div class="container">
             <div class="end-section-logo-box">
                 <a class="logo end-section-link" href="./index.html">Web<span class="end-logo-studio">Studio</span></a>
@@ -398,7 +398,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button class="modal-close-btn" type="button">
                 <svg class="close-icon" width="8" height="8">
@@ -447,7 +447,7 @@
                 <button class="send-button" type="submit">Send</button>
             </form>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
