--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         </div>
     </header> -->
     <main>
-        <!-- <section class="efective-solutions-section">
+        <section class="efective-solutions-section">
             <div class="container">
                 <h1 class="efective-solutions-title">Effective Solutions
                     for Your Business</h1>
                 <button class="efective-solutions-button" type="button">Order Service</button>
             </div>
-        </section> -->
-        <!-- <section class="core-values-section">
+        </section>
+        <section class="core-values-section">
             <div class="container">
                 <h2 class="visually-hidden">Core values</h2>
                 <ul class="core-values-list">
@@ -92,7 +92,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <section class="team">
             <div class="container">
                 <h2 class="section-title">Our Team</h2>
@@ -252,7 +252,7 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="portfolio-section">
+        <section class="portfolio-section">
             <div class="container">
                 <h2 class="section-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
@@ -341,7 +341,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- <footer class="end-section">
         <div class="container">
