--- a/index.html
+++ b/index.html
@@ -21,24 +21,36 @@
   </head>
 
   <body>
-    <!-- <header class="page-top">
-        <div class="page-top-container container">
-            <nav class="navigation">
-                <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-                <ul class="navigation-list">
-                    <li><a class="navigation-link current" href="./index.html">Studio</a></li>
-                    <li><a class="navigation-link" href="">Portfolio</a></li>
-                    <li><a class="navigation-link" href="">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="contact-info">
-                <ul class="contact-list">
-                    <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
-        </div>
-    </header> -->
+    <header class="page-top">
+      <div class="page-top-container container">
+        <nav class="navigation">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <ul class="navigation-list">
+            <li>
+              <a class="navigation-link current" href="./index.html">Studio</a>
+            </li>
+            <li><a class="navigation-link" href="">Portfolio</a></li>
+            <li><a class="navigation-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contact-info">
+          <ul class="contact-list">
+            <li>
+              <a class="contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
     <main>
       <section class="efective-solutions-section">
         <div class="container">
@@ -487,7 +499,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -567,6 +579,6 @@
           <button class="send-button" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
