--- a/index.html
+++ b/index.html
@@ -49,8 +49,46 @@
             </li>
           </ul>
         </address>
+        <button class="top-open-btn" type="button">
+          <svg class="top-open-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-top-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
+    <div class="top-mod is-open">
+      <button class="top-close-btn" type="button">
+        <svg class="top-close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <nav class="navigation">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
+        >
+        <ul class="navigation-list">
+          <li>
+            <a class="navigation-link current" href="./index.html">Studio</a>
+          </li>
+          <li><a class="navigation-link" href="">Portfolio</a></li>
+          <li><a class="navigation-link" href="">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <address class="contact-info">
+        <ul class="contact-list">
+          <li>
+            <a class="contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
     <main>
       <section class="efective-solutions-section">
         <div class="container">
