--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </button>
       </div>
     </header>
-    <div class="top-mod is-open">
+    <div class="top-mod">
       <button class="top-close-btn" type="button">
         <svg class="top-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
@@ -64,30 +64,61 @@
       </button>
 
       <nav class="navigation">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-studio">Studio</span></a
-        >
-        <ul class="navigation-list">
+        <ul class="top-navigation-list">
           <li>
-            <a class="navigation-link current" href="./index.html">Studio</a>
+            <a class="top-navigation-link top-current" href="./index.html"
+              >Studio</a
+            >
           </li>
-          <li><a class="navigation-link" href="">Portfolio</a></li>
-          <li><a class="navigation-link" href="">Contacts</a></li>
+          <li><a class="top-navigation-link" href="">Portfolio</a></li>
+          <li><a class="top-navigation-link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address class="contact-info">
-        <ul class="contact-list">
+      <address class="top-contact-info">
+        <ul class="top-contact-list">
           <li>
-            <a class="contacts" href="mailto:info@devstudio.com"
+            <a class="top-contacts" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="top-contacts" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
+      <ul class="top-icon-list">
+        <li class="icon-link-icon">
+          <a class="icon-link" href="./index.html">
+            <svg class="icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="icon-link-icon">
+          <a class="icon-link">
+            <svg class="icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="icon-link-icon">
+          <a class="icon-link">
+            <svg class="icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="icon-link-icon">
+          <a class="icon-link">
+            <svg class="icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
     <main>
       <section class="efective-solutions-section">
@@ -161,7 +192,11 @@
           <ul class="team-list">
             <li class="team-list-item">
               <img
-                src="./images/team/img-3-min.jpg"
+                srcset="
+                  ./images/team/img-3-min.jpg 1x,
+                  ./images/team/img-3.jpg     2x
+                "
+                src="./images/team/img-1-min.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -206,6 +241,10 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="
+                  ./images/team/img-2-min.jpg 1x,
+                  ./images/team/img-2.jpg     2x
+                "
                 src="./images/team/img-2-min.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -251,6 +290,10 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="
+                  ./images/team/img-1-min.jpg 1x,
+                  ./images/team/img-1.jpg     2x
+                "
                 src="./images/team/img-1-min.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -294,6 +337,7 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="./images/team/img-min.jpg 1x, ./images/team/img.jpg 2x"
                 src="./images/team/img-min.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -345,6 +389,10 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-pic">
                 <img
+                  srcset="
+                    ./images/portfolio/portfolio-1.jpg    1x,
+                    ./images/portfolio/portfolio-x2-1.jpg 2x
+                  "
                   src="./images/portfolio/portfolio-1.jpg"
                   alt="Banking App"
                   width="360"
@@ -366,6 +414,10 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-pic">
                 <img
+                  srcset="
+                    ./images/portfolio/portfolio-2.jpg    1x,
+                    ./images/portfolio/portfolio-x2-2.jpg 2x
+                  "
                   src="./images/portfolio/portfolio-2.jpg"
                   alt="Cashless Payment"
                   width="360"
@@ -387,6 +439,10 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-pic">
                 <img
+                  srcset="
+                    ./images/portfolio/portfolio-3.jpg    1x,
+                    ./images/portfolio/portfolio-x2-3.jpg 2x
+                  "
                   src="./images/portfolio/portfolio-3.jpg"
                   alt="Meditation App"
                   width="360"
@@ -408,6 +464,10 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-pic">
                 <img
+                  srcset="
+                    ./images/portfolio/portfolio-4.jpg    1x,
+                    ./images/portfolio/portfolio-x2-4.jpg 2x
+                  "
                   src="./images/portfolio/portfolio-4.jpg"
                   alt="Taxi Service"
                   width="360"
@@ -429,6 +489,10 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-pic">
                 <img
+                  srcset="
+                    ./images/portfolio/portfolio-5.jpg    1x,
+                    ./images/portfolio/portfolio-x2-5.jpg 2x
+                  "
                   src="./images/portfolio/portfolio-5.jpg"
                   alt="Screen Illustrations"
                   width="360"
@@ -450,6 +514,10 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-pic">
                 <img
+                  srcset="
+                    ./images/portfolio/portfolio-6.jpg    1x,
+                    ./images/portfolio/portfolio-x2-6.jpg 2x
+                  "
                   src="./images/portfolio/portfolio-6.jpg"
                   alt="Online Courses"
                   width="360"
@@ -608,7 +676,7 @@
             />
             <label class="last-input-label" for="user-privacy"
               ><span class="privacy-span"
-                ><svg width="10" height="8">
+                ><svg width="12" height="12">
                   <use href="./images/icons.svg#icon-check"></use></svg></span
               >I accept the terms and conditions of the
               <a href="" class="checkbox-link">Privacy Policy</a></label
